CHATS_SIT/force-app/main/default/objects/Claim_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Authorization_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Authorization Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Case Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Child Last Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_For__c</fullName>
        <label>Claim For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Vacant Slot Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Individual_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Individual Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Manual_Claim__c</fullName>
        <label>Provider Manual Claim</label>
        <referenceTo>Provider_Manual_Claim__c</referenceTo>
        <relationshipLabel>Claim Details</relationshipLabel>
        <relationshipName>Claim_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Slot_Contract_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Slot Contract Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Child_Claimed_Amount__c</fullName>
        <label>Total Child Claimed Amount</label>
        <summarizedField>Claim_Day_Detail__c.Claim_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Claim_Day_Detail__c.Is_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Claim_Day_Detail__c.Claim_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Claim Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Claim Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Claim Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>